<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/tilebg">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3"
        android:gravity="bottom" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/historyTV"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="4"
                android:textSize="35sp"
                android:textColor="@color/lightpink"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/displayTV"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_span="4"
                android:textSize="90sp"
                android:textColor="@color/white"
                android:textAlignment="textEnd"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/clear"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnRemdig"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/remdig"
                android:textSize="30sp"

                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnNegpos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/negpos"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/plus"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt7"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt8"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt9"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/minus"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt4"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt5"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt6"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/mult"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt1"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt2"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt3"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDivi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/divi"
                android:textSize="20sp"
                android:backgroundTint="@color/darkpink"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/txt0"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnDec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/dec"
                android:textSize="20sp"
                android:backgroundTint="@color/buttons"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:backgroundTint="@color/lightpink"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>